# api-router.js
@@ -2,6 +2,7 @@
 const express = require('express');
 const morgan = require('morgan');
 const Datasource = require("./controllers/datasource-controller.js");
+const MapaPlanta = require("./controllers/mapa-planta-controller.js");
 const Application = require("./controllers/application-controller.js");
 const NetsmsVersion = require("./controllers/netsms-version-controller.js");
 const NetsmsParameter = require("./controllers/netsms-parameter-controller.js");
@@ -11,6 +12,12 @@ const Asm = require("./controllers/asm-controller.js");
 let router = express.Router();
 router.use(morgan('dev'));
  
+router.get("/mapa-planta", MapaPlanta.listMapaPlanta );
+router.get("/mapa-planta/:id", MapaPlanta.getMapaPlanta ); 
+router.put("/mapa-planta/:id", MapaPlanta.updateMapaPlanta ); 
+router.post("/mapa-planta", MapaPlanta.createMapaPlanta );
+router.delete("/mapa-planta/:id", MapaPlanta.deleteMapaPlanta ); 
+
 router.get("/datasources", Datasource.listDatasources );
 router.get("/datasources/:datasourceCode", Datasource.getDatasource ); 
 router.put("/datasources/:datasourceCode", Datasource.updateDatasource ); 
